# xrp-price-aggregate

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/xrp_price_aggregate/: __init__.py  __main__.py  aggregate_filter.py  version.py
src/xrp_price_aggregate/providers/: __init__.py  base.py  binance.py  bitrue.py  bitstamp.py  gen_default.py  hitbtc.py  kraken.py  threexrp.py  xrpl_oracle.py
