#  ▄▀▀▄ ▀▀▄  ▄▀▀▀▀▄   ▄▀▀▀▀▄      ▄▀▀▄ █ 
# █   ▀▄ ▄▀ █      █ █    █      █  █ ▄▀ 
# ▐     █   █      █ ▐    █      ▐  █▀▄  
#       █   ▀▄    ▄▀     █         █   █ 
#     ▄▀      ▀▀▀▀     ▄▀▄▄▄▄▄▄▀ ▄▀   █  
#     █                █         █    ▐  
#     ▐                ▐         ▐  
# 
# xrp-price-aggregate setup.cfg
[metadata]
license_files = LICENSE
name = xrp-price-aggregate
version = 0.0.7
author = Joseph Chiocchi
author_email = joe@yolk.cc
description = A utility library that wraps grabbing the current spot price of $XRP from various exchanges.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yyolk/xrp-price-aggregate
project_urls =
    Bug Tracker = https://github.com/yyolk/xrp-price-aggregate/issues
    Source = https://github.com/yyolk/xrp-price-aggregate/
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords = xrp, xrpl, ccxt, cryptocurrency

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7, <4
install_requires =
    ccxt~=1.54.45
    httpx~=0.18.2

[options.packages.find]
where = src
